force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/ZRH_ConfiguracionTraduccion__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type que almacena las traducciones funcionales de los JSON tags de los campos ZRH_Tarifa__c, ZRH_AtributosRequisitosAsegurabilidad__c,  ZRH_AtributosReqMedicosSeleccionado__c.
,</description>
    <label>Configuración de Traducción</label>
    <pluralLabel>Configuración de Traducción</pluralLabel>
</CustomObject>