force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/fields/ZRH_Campo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Campo__c</fullName>
    <label>Campo</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>