force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/fields/ZRH_Orden__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Orden__c</fullName>
    <label>Orden</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>