force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/fields/ZRH_Plan__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Plan__c</fullName>
    <label>Plan</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>