force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/fields/ZRH_SubEstructura__c.field-meta.xml
<CustomField>
    <fullName>ZRH_SubEstructura__c</fullName>
    <label>Sub Estructura</label>
    <type>TextArea</type>
</CustomField>