force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/fields/ZRH_Tag__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Tag__c</fullName>
    <label>Tag</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>