force-app/main/default/objects/ZRH_ConfiguracionTraduccion__mdt/fields/ZRH_TraduccionFuncional__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TraduccionFuncional__c</fullName>
    <label>Traducción Funcional</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>